# zorkie

./: .gitignore  .gitmodules  COMPILATION_STATUS.md  COMPILER_README.md  COMPLETION_STATUS.md  FULL_ZILF_IMPLEMENTATION.md  MISSING_VS_ZILF_SPEC.md  MULTIVERSION_SUPPORT.md  OPCODES_IMPLEMENTED.md  OPTIMIZATION_ARCHITECTURE.md  PENDING_FEATURES.md  READ.md  README.md  SIZE_COMPARISON.md  STATUS.md  WIP.md  WIP_NOTES.md  ZIL_VS_ZILF_COMPREHENSIVE.md  ZMACHINE_SPECIFICATION.md  build-site.sh  pyproject.toml  test-pairs-log.md  test_repeat_return.zil  test_zork1_slice.zil  todo.txt  zilc.py  zorkie
.claude/: CLAUDE.md
docs/: ABBREVIATIONS_IMPLEMENTATION.md  ACTUAL_MISSING_5_PERCENT.md  COMPARISON_ANALYSIS.md  COMPILER_README.md  DAEMON_SYSTEM_DESIGN.md  IMPROVED_STRING_COLLECTION.md  KNOWN_ISSUES.md  MULTIVERSION_SUPPORT.md  OPCODES_IMPLEMENTED.md  OPTIMIZATION_RESULTS.md  PLANETFALL_ANALYSIS.md  PROGRESS_REPORT.md  READ.md  VERSION_SUPPORT.md  ZILF_COMPATIBILITY_UPDATE.md  ZILF_PARSER_TABLE_NOTES.md  ZILF_VS_MDL_ZIL.md  ZIL_SPECIFICATION.md  ZMACHINE_GAMES_BY_VERSION.md  ZMACHINE_SPECIFICATION.md  ZORK1_COMPILATION_STATUS.md  ZTOOLS_ANALYSIS.md
examples/: advanced.zil  advanced_opcodes_test.zil  advanced_ops_test.zil  arithmetic.zil  bitwise_test.zil  call_and_predicates_test.zil  comparison_and_parse_test.zil  cond_test.zil  control_flow_test.zil  counter.zil  daemon_extras_test.zil  daemon_test.zil  dless_test.zil  extended_ops_test.zil  final_opcodes_test.zil  final_ops_test.zil  final_utilities_test.zil  goto_test.zil  held_test.zil  hello.zil  igrtr_test.zil  (+43 more)
(+124 files in other folders)
